2009-11-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2093567 ] Qualifiers are not returned for REF properties
	(patch by Bart Whitely)
	
2009-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, test/xmltest/SNS*:
	[ 2863775 ] interopProvider needs SourceNamespaces property

2009-11-03 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am
	[ 2871527 ] TestProviders not switchable

2009-11-02 Sean Swehla <smswehla@linux.vnet.ibm.com>
	* 20_indication.mof, default.reg.in, interopServerProvider.c
	[ 2873007 ] IndicationProfile: CIM_IndicationServiceCapabilities

2009-10-30  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac
	[ 1993231 ] configure doesn't fail for all missing dependencies

2009-10-30  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* sfcb-dox.conf.in
	[ 2881700 ] Build failure when docs are enabled

2009-10-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectpath.c:
	[ 2888178 ] getObjectPath() ignores numeric types

2009-10-22 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* Makefile.am,test/stageschema.sh,test/TestProviders/cmpiTestIndicationProvider.c,
	  test/TestProviders/tests/IndTest*.xml,test/TestProviders/tests/IndTest*.lines
	[ 2859978 ] TestProviders for SFCB ( Sample Indicationprovider inclusion )

2009-10-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/ECTP*:
	[ 2882663 ] IndicationProfile: CIM_ElementConformsToProfile
	Testcases

2009-10-21 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac, test/localtests/Makefile.am, test/localtests/test*.c
	[ 2883083 ] Test cases when SFCB is configured using local connect option

2009-10-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* default.reg.in, 10_interop.mof, interopServerProvider.c: 
	[ 2882663 ] IndicationProfile: CIM_ElementConformsToProfile

2009-10-15 Pratyusha Doddpaneni <pratyusha.d@in.ibm.com>
	* configure.ac
	[ 2871527 ] TestProviders not switchable
